--- a/zui_sorteador/ui5.yaml
+++ b/zui_sorteador/ui5.yaml
@@ -1,15 +1,23 @@
-# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
-
 specVersion: "3.1"
 metadata:
   name: zuisorteador
 type: application
+
+builder:
+  customTasks:
+    - name: ui5-tooling-modules-task
+      afterTask: replaceVersion
+
 server:
   customMiddleware:
-    - name: fiori-tools-proxy
+    - name: ui5-tooling-modules-middleware
       afterMiddleware: compression
       configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        debug: false
+    - name: fiori-tools-proxy
+      afterMiddleware: ui5-tooling-modules-middleware
+      configuration:
+        ignoreCertError: false
         ui5:
           path:
             - /resources
